--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,6 +94,7 @@
     <link rel="icon" type="image/png" href="{{ "/favicon-16x16.png" | relative_url }}" sizes="16x16">
     <link rel="icon" type="image/png" href="{{ "/favicon-32x32.png" | relative_url }}" sizes="32x32">
     <link rel="shortcut icon" href="{{ "/favicon.ico" | relative_url }}">
+    <script data-ad-client="ca-pub-8861644509562818" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     {% if site.google_analytics %}
     <script type="text/javascript">
