--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="{{ "/" | relative_url }}" class="site-title">Deep Neural Machine</a>
+      <a href="{{ "/" | relative_url }}" class="site-title">Artificial Intelligence</a>
       <nav class="site-nav">
         {% include navigation.html %}
       </nav>
