--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,8 +1,7 @@
 <div class="py2 post-footer">
-  <img src="{{ site.baseurl }}/images/me.jpeg" alt="John Otander" class="avatar" />
+  <img src="{{ site.baseurl }}/images/me.jpeg" alt="Rohith R Nair" class="avatar" />
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
+   Learning never exhausts the mind.
   </p>
   <p>
     Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
