--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,5 +1,5 @@
 <div class="py2 post-footer">
-  <img src="{{ site.baseurl }}/images/me.jpeg" alt="Rohith R Nair" class="avatar" />
+  <img src="{{ site.baseurl }}/images/me.jpeg" alt="codeslord" class="avatar" />
   <p>
    Learning never exhausts the mind.
   </p>
