--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      <p>Copyright &#169; Rohith R Nair. All rights reserved.</p>
+      <p>Copyright &#169; codeslord. All rights reserved.</p>
     </small>
   </div>
 </footer>
