Buy me a coffee

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -114,4 +114,5 @@
             });
         });
     </script>
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="rohithragh2" data-color="#FFDD00" data-emoji=""  data-font="Comic" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
 </head>
