--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,7 +1,27 @@
 
-.posts {
-  margin: 0;
+.post {
+  position: relative;
+  overflow: hidden;
 }
+
+.post-overlay {
+  position: relative;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+}
+
+.post::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3); /* Adjust the color and opacity as needed */
+  z-index: 0;
+}
+
 
 .posts .post {
   margin-bottom: 0.75em;
