--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -7,7 +7,7 @@
 .post-overlay {
   position: relative;
   z-index: 1;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgb(255, 255, 255);
   padding: 1rem;
 }
 
