--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,22 +1,7 @@
+
 .post {
   position: relative;
   overflow: hidden;
-  margin-bottom: 2rem;
-  border: 1px solid #eaeaea;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.post-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  opacity: 0.3;
-  z-index: 0;
 }
 
 .post-overlay {
@@ -26,17 +11,16 @@
   padding: 1rem;
 }
 
-
-.post::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.3); /* Adjust the color and opacity as needed */
-  z-index: 0;
-}
+// .post::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: rgba(0, 0, 0, 0.3); /* Adjust the color and opacity as needed */
+//   z-index: 0;
+// }
 
 
 .posts .post {
@@ -75,7 +59,7 @@
   font-weight: 300;
   margin: 0;
   padding: .25em 0;
-  color: #ffffff;
+  color: #7a7a7a;
   font-style: italic;
 }
 
