--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -4,12 +4,12 @@
   overflow: hidden;
 }
 
-.post-overlay {
-  position: relative;
-  z-index: 1;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 1rem;
-}
+// .post-overlay {
+//   position: relative;
+//   z-index: 1;
+//   background: rgba(255, 255, 255, 0.8);
+//   padding: 1rem;
+// }
 
 // .post::before {
 //   content: "";
