--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
-<footer class="center">
+<footer class="site-footer">
+<div class="'wrap">
   <div class="measure">
     <small>
       <p>copyright &#169; codeslord. All rights reserved.</p>
     </small>
   </div>
+</div>
 </footer>
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
