--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -27,3 +27,33 @@ footer {
   padding: $footer-padding;
   text-align: center;
 }
+
+/* _footer.scss */
+.site-footer {
+  padding-top: $space-2;
+  padding-bottom: $space-2;
+  background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
+  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
+  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
+  // border-radius: 16px; /* Rounded corners */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
+  text-align: center;
+  margin-top: 0; /* Ensure no top margin */
+}
+
+.site-footer a {
+  color: $footer-color;
+  font-size: $footer-font-size;
+  font-weight: $footer-font-weight;
+  background-image: none;
+  text-decoration: none; /* Remove underline */
+  transition: color 0.3s; /* Smooth transition for hover effects */
+}
+
+.site-footer a:hover,
+.site-footer a:focus,
+.site-footer a:active {
+  // color: $footer-link-hover-color;
+  opacity: 0.88;
+}
