--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,15 +1,15 @@
-.post {
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 2rem;
-  background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
-  border-radius: 16px; /* Glassmorphic rounded corners */
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
-  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
-  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
-  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
-  padding: 2%; /* Ensure there is no padding */
-}
+// .post {
+//   position: relative;
+//   overflow: hidden;
+//   margin-bottom: 2rem;
+//   background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
+//   border-radius: 16px; /* Glassmorphic rounded corners */
+//   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
+//   backdrop-filter: blur(5px); /* Glassmorphic blur effect */
+//   -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
+//   border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
+//   padding: 2%; /* Ensure there is no padding */
+// }
 
 .post-background {
   position: absolute;
@@ -37,7 +37,21 @@
   box-sizing: border-box; /* Ensure padding doesn't cause overflow */
 }
 
+// .posts .post {
+//   margin-bottom: 0.75em;
+//   border-bottom: thin solid #f3f3f3;
+// }
 .posts .post {
+  position: relative;
+  overflow: hidden;
+  background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
+  border-radius: 16px; /* Rounded corners */
+  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
+  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
+  // margin-bottom: 2rem; /* Adjust spacing between posts */
+  padding: 1rem; /* Adjust padding inside the post */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Ensure box shadow */
   margin-bottom: 0.75em;
   border-bottom: thin solid #f3f3f3;
 }
