Github syntax highlighting

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -70,12 +70,12 @@ body {
 }
 
 /* Specific class for main content */
-.main-content .post {
+.main-content {
   margin: 0;
   padding: 2%;
-  box-shadow: none; /* Ensure no box shadow */
-  border: none; /* Ensure no border */
-  border-radius: 0; /* Remove border radius */
+  // box-shadow: none; /* Ensure no box shadow */
+  // border: none; /* Ensure no border */
+  // border-radius: 0; /* Remove border radius */
 }
 
 
