--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,7 +1,11 @@
 pre,
 pre code {
-  background-color: transparent;
-  border-radius: $pre-border-radius;
+  background-color: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
+  border-radius: 16px; /* Rounded corners */
+  // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
+  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
+  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
 }
 
 pre,
@@ -18,7 +22,12 @@ pre {
   line-height: 1.11;
   overflow-x: scroll;
   margin-bottom: 0.88em;
-  background-color: $pre-background-color;
+  background-color: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
+  border-radius: 16px; /* Rounded corners */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
+  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
+  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
 }
 
 .highlight .p {
@@ -27,15 +36,15 @@ pre {
 }
 
 pre {
-    counter-reset: line-numbering;
-    white-space: pre;
-    overflow-x: auto;
-    word-break: inherit;
-    word-wrap: inherit;
+  counter-reset: line-numbering;
+  white-space: pre;
+  overflow-x: auto;
+  word-break: inherit;
+  word-wrap: inherit;
 }
 
 pre a {
-    background-image: none;
+  background-image: none;
 }
 
 pre a::before {
