--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,15 +1,15 @@
-// .post {
-//   position: relative;
-//   overflow: hidden;
-//   margin-bottom: 2rem;
-//   background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
-//   border-radius: 16px; /* Glassmorphic rounded corners */
-//   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
-//   backdrop-filter: blur(5px); /* Glassmorphic blur effect */
-//   -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
-//   border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
-//   padding: 2%; /* Ensure there is no padding */
-// }
+.post {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 2rem;
+  background: rgba(255, 255, 255, 0.2); /* Glassmorphic background */
+  // border-radius: 16px; /* Glassmorphic rounded corners */
+  // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Glassmorphic shadow */
+  backdrop-filter: blur(5px); /* Glassmorphic blur effect */
+  -webkit-backdrop-filter: blur(5px); /* Glassmorphic blur effect for Safari */
+  border: 1px solid rgba(255, 255, 255, 0.3); /* Glassmorphic border */
+  padding: 2%; /* Ensure there is no padding */
+}
 
 .post-background {
   position: absolute;
