--- a/_sass/basscss/_syntax-highlighting.scss
+++ b/_sass/basscss/_syntax-highlighting.scss
@@ -14,6 +14,12 @@
   color: #82071e;
   background-color: #ffebe9;
 }
+.highlight .n {
+  color: #333333;
+}
+.highlight .p {
+  color: #189900;
+}
 .highlight .nb {
   color: #953800;
 }
