--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -19,7 +19,7 @@
   height: 100%;
   background-size: cover;
   background-position: center;
-  filter: opacity(0.7);
+  // filter: opacity(0.7);
   border-radius: 10px;
   z-index: 0;
 }
