--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -19,6 +19,8 @@
   height: 100%;
   background-size: cover;
   background-position: center;
+  background-blend-mode: overlay; /* Blend image and color */
+  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent overlay */
   // filter: opacity(0.7);
   border-radius: 10px;
   z-index: 0;
