--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -66,7 +66,7 @@
 .post-link .post-title {
   margin-top: 0;
   font-weight: 600;
-  color: #333;
+  color: #000;
   position: relative;
   z-index: 2; /* Ensure link is above overlay */
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Glow effect */
@@ -93,6 +93,8 @@
   padding: .25em 0;
   color: #444444;
   font-style: italic;
+  position: relative;
+  z-index: 2;
 }
 
 .related-post-title {
