--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,7 +60,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/images/background.webp');
+  background: linear-gradient(135deg, #73D1CC 0%, #FFDC62 50%, #FF8BD8 100%);
   background-size: 100%;
   background-position: center;
   background-attachment: fixed;
