--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -60,7 +60,14 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #73D1CC 0%, #FFDC62 50%, #FF8BD8 100%);
+  background: linear-gradient(135deg, 
+    #73D1CC 0%, 
+    rgba(255, 255, 255, 0.8) 20%, 
+    #FFDC62 35%, 
+    rgba(255, 255, 255, 0.9) 55%, 
+    #FFDC62 65%, 
+    rgba(255, 255, 255, 0.8) 80%, 
+    #FF8BD8 100%);
   background-size: 100%;
   background-position: center;
   background-attachment: fixed;
