--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -77,9 +77,9 @@
   cursor: not-allowed;
 }
 
-.pagination a:hover,
-.pagination a:active,
-.pagination a:focus {
+.button-disabled:hover,
+.button-disabled:active,
+.button-disabled:focus {
   cursor: not-allowed;
   transform: none;
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
